Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumberIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(number var)
        if var = 5.0
            output "passed"
        end
    end
end
