Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberIntObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(5)
        Test(v)
    end

    action Test(number var)
    end
end
